# aoc22-cpp

./: .gitignore  CMakeLists.txt
day01/: lib.cpp
day01/tests/: tests.cpp
day02/: CMakeLists.txt  lib.cpp  main.cpp
day02/tests/: CMakeLists.txt  tests.cpp
